--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.11.0",
-    "react-intersection-observer": "^9.5.2"
+    "react-intersection-observer": "^9.5.2",
+    "react-player": "^2.14.1"
   },
   "devDependencies": {
     "@types/node": "^20",
